--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,10 +51,6 @@ h4{
 	font-size: 20px;
 }
 
-nav {
-    background-color: #61bfad;
-}
-
 section{
 	margin: 120px 0;
 }
@@ -105,6 +101,32 @@ section{
     width: 40px;
     height: 2px;
     background-color: #61bfad;
+}
+
+/**
+* ----------------------------------------------------------------------------------------
+*    Nav
+* ----------------------------------------------------------------------------------------
+*/
+
+nav {
+    background-color: #61bfad;
+    position: sticky;
+    right: 0px;
+    top: 0px;
+    left: 0px;
+    -webkit-transition: -webkit-transform .5s cubic-bezier(0.86, 0, 0.07, 1);
+    -moz-transition: -moz-transform .5s cubic-bezier(0.86, 0, 0.07, 1);
+    transition: transform .5s cubic-bezier(0.86, 0, 0.07, 1);
+    z-index: 1;
+}
+
+nav.hidden {
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
+    transform: translateY(-100%);
 }
 
 /**
@@ -304,6 +326,101 @@ section{
 
 .card-content .more-link{
     margin-top: 0;
+}
+
+/**
+* ----------------------------------------------------------------------------------------
+*    Single Page
+* ----------------------------------------------------------------------------------------
+*/
+
+#single-intro{
+    margin: 0;
+}
+
+.post-content{
+    margin: 60px 0 40px;
+}
+
+.post-content > p:first-of-type {
+    display: inline-block;
+    width: 100%;
+}
+.post-content > p:first-of-type:first-letter {
+    float: left;
+    font-size: 78px;
+    font-weight: 700;
+    line-height: 58px;
+    padding-right: 10px;
+    color: #61bfad;
+}
+
+#flow-toggle, 
+#back-to-top{
+    position: fixed;
+    bottom: calc(50% - 28px);
+    left: 40px;
+    -webkit-animation-duration: .5s;
+    animation-duration: .5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    opacity: 0;
+}
+
+#back-to-top{
+    background-color: #333;
+}
+
+#flow-toggle.slideInLeft, 
+#back-to-top.slideInLeft{
+    -webkit-animation-name: slideInLeft;
+    animation-name: slideInLeft;
+    opacity: 1;
+}
+
+#flow-toggle.slideOutLeft, 
+#back-to-top.slideOutLeft {
+    -webkit-animation-name: slideOutLeft;
+    animation-name: slideOutLeft;
+}
+
+@keyframes slideInLeft {
+    from {
+        -webkit-transform: translate3d(-200%, 0, 0);
+        transform: translate3d(-200%, 0, 0);
+        visibility: visible;
+    }
+
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@-webkit-keyframes slideOutLeft {
+    from {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        visibility: hidden;
+        -webkit-transform: translate3d(-200%, 0, 0);
+        transform: translate3d(-200%, 0, 0);
+    }
+}
+
+@keyframes slideOutLeft {
+    from {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        visibility: hidden;
+        -webkit-transform: translate3d(-200%, 0, 0);
+        transform: translate3d(-200%, 0, 0);
+    }
 }
 
 /**
