--- a/public/css/app.css
+++ b/public/css/app.css
@@ -325,7 +325,7 @@ nav.hidden {
 }
 
 .card-content .more-link{
-    margin-top: 0;
+    margin-top: 20px;
 }
 
 /**
@@ -421,6 +421,97 @@ nav.hidden {
         -webkit-transform: translate3d(-200%, 0, 0);
         transform: translate3d(-200%, 0, 0);
     }
+}
+
+/**
+* -------------------------------------
+*   Next - Prev
+* -------------------------------------
+*/
+
+.nav-links {
+    display: flex;
+    padding: 25px 0;
+    border-width: 1px 0;
+    margin-bottom: 60px;
+}
+
+.nav-links .back-to-list, 
+.nav-links .nav-next, 
+.nav-links .nav-previous {
+    position: relative;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.nav-previous {
+    width: 45%;
+    padding-left: 35px;
+    margin-right: 30px;
+}
+
+.back-to-list {
+    width: 45px;
+}
+
+.nav-links .nav-next {
+    padding-right: 35px;
+    margin-left: 30px;
+    width: 45%;
+    text-align: right;
+}
+
+.nav-links i{
+    color: #61bfad;
+}
+
+.nav-previous i {
+    position: absolute;
+    left: -15px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    font-size: 42px;
+}
+
+.back-to-list i{
+    font-size: 45px;
+}
+
+.nav-links .nav-next i {
+    position: absolute;
+    right: -15px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    font-size: 42px;
+}
+
+.meta-nav {
+    color: #b4b5bb;
+    font-size: 12px;
+    line-height: 23px;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+}
+
+.nav-previous .link-title {
+    -ms-flex-item-align: flex-start;
+    align-self: flex-start;
+    max-width: 100%;
+    margin: 0;
+}
+
+.nav-next .link-title {
+    -webkit-align-self: flex-end;
+    -moz-align-self: flex-end;
+    -ms-align-self: flex-end;
+    -ms-flex-item-align: flex-end;
+    align-self: flex-end;
+    max-width: 100%;
+    margin: 0;
 }
 
 /**
