--- a/public/css/app.css
+++ b/public/css/app.css
@@ -461,6 +461,46 @@ nav.hidden {
 
 /**
 * ----------------------------------------------------------------------------------------
+*    Modal Report
+* ----------------------------------------------------------------------------------------
+*/
+
+.modal .modal-content{
+    padding: 50px 24px;
+    text-align: center;
+    border-top: 3px solid #61bfad;
+}
+
+.modal h4{
+    position: relative;
+    font-weight: 700;
+    letter-spacing: 1px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin: 0;
+    display: inline-block;
+}
+
+.modal h4:before, 
+.modal h4:after{
+    position: absolute;
+    content: '';
+    top: 50%;
+    width: 40px;
+    height: 2px;
+    background-color: #61bfad;
+}
+
+.modal h4:before{
+    left: 0;
+}
+
+.modal h4:after{
+    right: 0;
+}
+
+/**
+* ----------------------------------------------------------------------------------------
 *    Form
 * ----------------------------------------------------------------------------------------
 */
