ajout des vérifications du formulaire sur la page single

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -710,6 +710,28 @@ footer.position-absolute{
 
 /**
 * ----------------------------------------------------------------------------------------
+*    Error Message
+* ----------------------------------------------------------------------------------------
+*/
+
+.error-message{
+    color: #fff;
+    display: inline-block;
+    padding: 0 15px;
+    margin-bottom: 20px;
+}
+
+.error-message p{
+    display: flex;
+    align-items: center;
+}
+
+.error-message i{
+    padding-right: 10px;
+}
+
+/**
+* ----------------------------------------------------------------------------------------
 *    Media Queries
 * ----------------------------------------------------------------------------------------
 */
