--- a/public/css/app.css
+++ b/public/css/app.css
@@ -122,7 +122,7 @@ nav {
     -webkit-transition: -webkit-transform .5s cubic-bezier(0.86, 0, 0.07, 1);
     -moz-transition: -moz-transform .5s cubic-bezier(0.86, 0, 0.07, 1);
     transition: transform .5s cubic-bezier(0.86, 0, 0.07, 1);
-    z-index: 1;
+    z-index: 99;
 }
 
 nav.hidden {
@@ -1072,16 +1072,78 @@ textarea.materialize-textarea:focus:not([readonly]){
     font-weight: 700;
 }
 
+#comments-admin .comment-author{
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+#comments-admin .comment-excerpt, 
 #comments-admin .modal-content .modal-comment{
     font-style: italic;
-    font-size: 19px;
     line-height: 1.66em;
     letter-spacing: 0.02em;
     font-family: Gentium Book Basic;
 }
 
+#comments-admin .comment-excerpt{
+    font-size: 17px;
+}
+
+#comments-admin .modal-content .modal-comment{
+    font-size: 19px;
+}
+
 .modal .modal-close:hover {
     color: #ef5350;
+}
+
+/**
+* ----------------------------------------------------------------------------------------
+*    Admin Edit Posts
+* ----------------------------------------------------------------------------------------
+*/
+
+.dropify-wrapper, 
+.switch{
+    margin-bottom: 20px;
+}
+
+#edit-chapter .edit-form-content label{
+    display: none;
+}
+
+/**
+* ----------------------------------------------------------------------------------------
+*    Tinymce
+* ----------------------------------------------------------------------------------------
+*/
+
+.mce-tinymce iframe{
+    border-bottom: 1px solid #e8e8ea;
+}
+
+.mce-top-part::before{
+    box-shadow: none !important;
+}
+
+.mce-btn-group:not(:first-child){
+    margin-left: 10px !important;
+    border-left: none !important;
+}
+
+.mce-panel{
+    border: none !important;
+    box-shadow: none !important;
+}
+
+.mce-flow-layout {
+    background-color: #f7f7fa !important;
+    padding-bottom: 10px !important;
+}
+
+.mce-notification.mce-has-close {
+    display: none;
 }
 
 /**
