--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,13 +13,13 @@
 */
 
 html{
-	font-family: 'Muli', sans-serif;
-	font-weight: 400;
-	font-size: 16px;
-	font-style: normal;
-	line-height: 1.82em;
+    font-family: 'Muli', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 1.82em;
     letter-spacing: 0;
-	color: #333;
+    color: #333;
     background-color: #f7f7fa;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -28,9 +28,9 @@ html{
 }
 
 h1, h2, h3, h4{
-	font-family: 'Cinzel Decorative', cursive;
-	font-weight: 700;
-	font-style: normal;
+    font-family: 'Cinzel Decorative', cursive;
+    font-weight: 700;
+    font-style: normal;
     line-height: 1.4;
     color: #222;
 }
@@ -40,19 +40,19 @@ h1{
 }
 
 h2{
-	font-size: 30px;
+    font-size: 30px;
 }
 
 h3{
-	font-size: 34px;
+    font-size: 34px;
 }
 
 h4{
-	font-size: 20px;
+    font-size: 20px;
 }
 
 section{
-	margin: 60px 0;
+    margin: 60px 0;
 }
 
 .section-title {
@@ -61,15 +61,15 @@ section{
 }
 
 .section-title:first-letter {
-  	margin-right: -30px;
-  	font-size: 1.9em;
-  	padding: 0 30px;
-  	color: #61bfad;
-	border: 1px solid #61bfad;
+    margin-right: -30px;
+    font-size: 1.9em;
+    padding: 0 30px;
+    color: #61bfad;
+    border: 1px solid #61bfad;
 }
 
 .section-title .main-title{
-	margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .section-title .subtitle {
@@ -115,21 +115,22 @@ section{
 
 nav {
     background-color: #61bfad;
+    position: -webkit-sticky;
     position: sticky;
     right: 0px;
     top: 0px;
     left: 0px;
     -webkit-transition: -webkit-transform .5s cubic-bezier(0.86, 0, 0.07, 1);
-    -moz-transition: -moz-transform .5s cubic-bezier(0.86, 0, 0.07, 1);
+    transition: -webkit-transform .5s cubic-bezier(0.86, 0, 0.07, 1);
+    -o-transition: transform .5s cubic-bezier(0.86, 0, 0.07, 1);
     transition: transform .5s cubic-bezier(0.86, 0, 0.07, 1);
+    transition: transform .5s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform .5s cubic-bezier(0.86, 0, 0.07, 1);
     z-index: 99;
 }
 
 nav.hidden {
     -webkit-transform: translateY(-100%);
-    -moz-transform: translateY(-100%);
     -ms-transform: translateY(-100%);
-    -o-transform: translateY(-100%);
     transform: translateY(-100%);
 }
 
@@ -155,7 +156,7 @@ nav ul li a.active {
 */
 
 .overlay{
-	position: absolute;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
@@ -164,16 +165,20 @@ nav ul li a.active {
 }
 
 .parallax-content{
-	position: relative;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 100%;
     text-align: center;
 }
 
 .parallax-content .section-title h1, 
 .parallax-content .subtitle{
-	color: #fff;
+    color: #fff;
 }
 
 /**
@@ -183,7 +188,7 @@ nav ul li a.active {
 */
 
 #intro{
-	margin: 0;
+    margin: 0;
 }
 
 #intro .subtitle a {
@@ -209,18 +214,24 @@ nav ul li a.active {
 }
 
 .about-pict {
-    box-shadow: 15px 15px 0px 0px #61bfad;
+    -webkit-box-shadow: 15px 15px 0px 0px #61bfad;
+            box-shadow: 15px 15px 0px 0px #61bfad;
     overflow: hidden;
 }
 
 .about-pict img{
-	margin-bottom: -10px;
-	backface-visibility: hidden;
-	transition: all 0.5s ease-in-out;
+    margin-bottom: -10px;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    -webkit-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 .about-pict:hover img{
-	transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+        -ms-transform: scale(1.15);
+            transform: scale(1.15);
 }
 
 /**
@@ -230,9 +241,10 @@ nav ul li a.active {
 */
 
 .chapter-desc{
-	display: inline-block;
+    display: inline-block;
     position: relative;
-    box-shadow: 15px 15px 0px 0px #61bfad;
+    -webkit-box-shadow: 15px 15px 0px 0px #61bfad;
+            box-shadow: 15px 15px 0px 0px #61bfad;
     margin: 0 .75rem;
 }
 
@@ -243,37 +255,53 @@ nav ul li a.active {
 }
 
 .chapter-desc img{
-	display: block;
-    backface-visibility: hidden;
+    display: block;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    -webkit-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
 }
 
 .chapter-desc .infos{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
     opacity: 0;
 }
 
 .chapter-desc .infos h3{
-	color: #fff;
-	text-transform: uppercase;
+    color: #fff;
+    text-transform: uppercase;
 }
 
 .chapter-desc:hover .infos {
-	opacity: 1;
-  	background: rgba(0, 0, 0, 0.6);
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.6);
 }
 
 .chapter-desc:hover img {
-  	transform: scale(1.15);        
+    -webkit-transform: scale(1.15);
+        -ms-transform: scale(1.15);
+            transform: scale(1.15);        
 }
 
 .chapter-desc .subtitle{
@@ -288,7 +316,8 @@ nav ul li a.active {
 */
 
 .card{
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     background-color: #f7f7fa;
     margin-bottom: 50px;
 }
@@ -299,12 +328,17 @@ nav ul li a.active {
 
 .card .card-image img {
     max-height: 545px;
-    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    -webkit-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
 }
 
 .card .card-image:hover img {
-    transform: scale(1.15);      
+    -webkit-transform: scale(1.15);
+        -ms-transform: scale(1.15);
+            transform: scale(1.15);      
 }
 
 .card .card-image .card-title {
@@ -339,6 +373,8 @@ nav ul li a.active {
     opacity: .6;
     height: 30%;
     background-color: #ddd;
+    background-image: -webkit-radial-gradient(100% 150%, circle, #ddd 24%, white 25%, white 28%, #ddd 29%, #ddd 36%, white 36%, white 40%, transparent 40%, transparent), -webkit-radial-gradient(0 150%, circle, #ddd 24%, white 25%, white 28%, #ddd 29%, #ddd 36%, white 36%, white 40%, transparent 40%, transparent), -webkit-radial-gradient(50% 100%, circle, white 10%, #ddd 11%, #ddd 23%, white 24%, white 30%, #ddd 31%, #ddd 43%, white 44%, white 50%, #ddd 51%, #ddd 63%, white 64%, white 71%, transparent 71%, transparent), -webkit-radial-gradient(100% 50%, circle, white 5%, #ddd 6%, #ddd 15%, white 16%, white 20%, #ddd 21%, #ddd 30%, white 31%, white 35%, #ddd 36%, #ddd 45%, white 46%, white 49%, transparent 50%, transparent), -webkit-radial-gradient(0 50%, circle, white 5%, #ddd 6%, #ddd 15%, white 16%, white 20%, #ddd 21%, #ddd 30%, white 31%, white 35%, #ddd 36%, #ddd 45%, white 46%, white 49%, transparent 50%, transparent);
+    background-image: -o-radial-gradient(100% 150%, circle, #ddd 24%, white 25%, white 28%, #ddd 29%, #ddd 36%, white 36%, white 40%, transparent 40%, transparent), -o-radial-gradient(0 150%, circle, #ddd 24%, white 25%, white 28%, #ddd 29%, #ddd 36%, white 36%, white 40%, transparent 40%, transparent), -o-radial-gradient(50% 100%, circle, white 10%, #ddd 11%, #ddd 23%, white 24%, white 30%, #ddd 31%, #ddd 43%, white 44%, white 50%, #ddd 51%, #ddd 63%, white 64%, white 71%, transparent 71%, transparent), -o-radial-gradient(100% 50%, circle, white 5%, #ddd 6%, #ddd 15%, white 16%, white 20%, #ddd 21%, #ddd 30%, white 31%, white 35%, #ddd 36%, #ddd 45%, white 46%, white 49%, transparent 50%, transparent), -o-radial-gradient(0 50%, circle, white 5%, #ddd 6%, #ddd 15%, white 16%, white 20%, #ddd 21%, #ddd 30%, white 31%, white 35%, #ddd 36%, #ddd 45%, white 46%, white 49%, transparent 50%, transparent);
     background-image: radial-gradient(circle at 100% 150%, #ddd 24%, white 25%, white 28%, #ddd 29%, #ddd 36%, white 36%, white 40%, transparent 40%, transparent), radial-gradient(circle at 0 150%, #ddd 24%, white 25%, white 28%, #ddd 29%, #ddd 36%, white 36%, white 40%, transparent 40%, transparent), radial-gradient(circle at 50% 100%, white 10%, #ddd 11%, #ddd 23%, white 24%, white 30%, #ddd 31%, #ddd 43%, white 44%, white 50%, #ddd 51%, #ddd 63%, white 64%, white 71%, transparent 71%, transparent), radial-gradient(circle at 100% 50%, white 5%, #ddd 6%, #ddd 15%, white 16%, white 20%, #ddd 21%, #ddd 30%, white 31%, white 35%, #ddd 36%, #ddd 45%, white 46%, white 49%, transparent 50%, transparent), radial-gradient(circle at 0 50%, white 5%, #ddd 6%, #ddd 15%, white 16%, white 20%, #ddd 21%, #ddd 30%, white 31%, white 35%, #ddd 36%, #ddd 45%, white 46%, white 49%, transparent 50%, transparent);
     background-size: 50px 25px;
 }
@@ -459,6 +495,18 @@ nav ul li a.active {
     text-transform: uppercase;
 }
 
+.commentaires-list .collection .collection-item .commentaire-title .admin{
+    color: #61bfad;
+}
+
+.commentaires-list .collection .collection-item .commentaire-title .role{
+    color: #333;
+    font-size: 12px;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    font-family: 'Muli', sans-serif;
+}
+
 .commentaires-list .collection .collection-item .commentaire-postedAt{
     margin-bottom: 10px;
     font-size: 12px;
@@ -491,19 +539,22 @@ textarea.materialize-textarea,
 input[type=text].valid:not(.browser-default){
     background-color: #fff;
     border-bottom: 1px solid #e8e8ea;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 input[type=text]:not(.browser-default):focus:not([readonly]), 
 input[type=password]:not(.browser-default):focus:not([readonly]), 
 textarea.materialize-textarea:focus:not([readonly]){
     border-bottom: 1px solid #61bfad;
-    box-shadow: 0 1px 0 0 #61bfad;
+    -webkit-box-shadow: 0 1px 0 0 #61bfad;
+            box-shadow: 0 1px 0 0 #61bfad;
 }
 
 .input-field label {
     -webkit-transform: translateY(8px);
-    transform: translateY(8px);
+    -ms-transform: translateY(8px);
+        transform: translateY(8px);
     padding-left: 15px;
     letter-spacing: 0.2em;
     font-size: 13px;
@@ -512,9 +563,11 @@ textarea.materialize-textarea:focus:not([readonly]){
 
 .input-field label:not(.label-icon).active{
     -webkit-transform: translateY(-34px) scale(0.8);
-    transform: translateY(-34px) scale(0.8);
+    -ms-transform: translateY(-34px) scale(0.8);
+        transform: translateY(-34px) scale(0.8);
     -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
+    -ms-transform-origin: 0 0;
+        transform-origin: 0 0;
 }
 
 /**
@@ -553,6 +606,19 @@ textarea.materialize-textarea:focus:not([readonly]){
     -webkit-animation-name: slideOutLeft;
     animation-name: slideOutLeft;
     display: block;
+}
+
+@-webkit-keyframes slideInLeft {
+    from {
+        -webkit-transform: translate3d(-200%, 0, 0);
+        transform: translate3d(-200%, 0, 0);
+        visibility: visible;
+    }
+
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 @keyframes slideInLeft {
@@ -601,6 +667,8 @@ textarea.materialize-textarea:focus:not([readonly]){
 */
 
 .nav-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 25px 0;
     border-width: 1px 0;
@@ -611,9 +679,16 @@ textarea.materialize-textarea:focus:not([readonly]){
 .nav-links .nav-next, 
 .nav-links .nav-previous {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-decoration: none;
 }
 
@@ -643,7 +718,8 @@ textarea.materialize-textarea:focus:not([readonly]){
     left: -15px;
     top: 50%;
     -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
     font-size: 42px;
 }
 
@@ -656,7 +732,8 @@ textarea.materialize-textarea:focus:not([readonly]){
     right: -15px;
     top: 50%;
     -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
     font-size: 42px;
 }
 
@@ -677,7 +754,6 @@ textarea.materialize-textarea:focus:not([readonly]){
 
 .nav-next .link-title {
     -webkit-align-self: flex-end;
-    -moz-align-self: flex-end;
     -ms-align-self: flex-end;
     -ms-flex-item-align: flex-end;
     align-self: flex-end;
@@ -692,13 +768,13 @@ textarea.materialize-textarea:focus:not([readonly]){
 */
 
 .page-footer{
-	padding-top: 0;
-	background-color: #f7f7fa;
-	border-top: 3px dotted #61bfad;
+    padding-top: 0;
+    background-color: #f7f7fa;
+    border-top: 3px dotted #61bfad;
 }
 
 .page-footer .footer-copyright{
-	padding-top: 20px;
+    padding-top: 20px;
     padding-bottom: 0;
     color: #222;
     text-align: center;
@@ -819,6 +895,7 @@ textarea.materialize-textarea:focus:not([readonly]){
     -ms-transform: translateY(-100%);
     transform: translateY(-100%);
     -webkit-transition: all 0.3s 1s ease-out;
+    -o-transition: all 0.3s 1s ease-out;
     transition: all 0.3s 1s ease-out;
 }
 
@@ -827,6 +904,7 @@ textarea.materialize-textarea:focus:not([readonly]){
     -ms-transform: translateX(-100%);
     transform: translateX(-100%);
     -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -o-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
@@ -835,12 +913,14 @@ textarea.materialize-textarea:focus:not([readonly]){
     -ms-transform: translateX(100%);
     transform: translateX(100%);
     -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -o-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 .loaded #loader {
     opacity: 0;
     -webkit-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
 
@@ -853,7 +933,8 @@ textarea.materialize-textarea:focus:not([readonly]){
 #not-found .container, 
 #forbidden .container{
     background-color: #fff;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+            box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
 #not-found .main-title, 
@@ -881,8 +962,12 @@ textarea.materialize-textarea:focus:not([readonly]){
 }
 
 .error-message p{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .error-message i{
@@ -899,9 +984,15 @@ textarea.materialize-textarea:focus:not([readonly]){
     width: 100%;
     height: 46px;
     line-height: 46px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: #61bfad;
 }
 
@@ -919,7 +1010,9 @@ textarea.materialize-textarea:focus:not([readonly]){
 }
 
 #login-section .input-field label:not(.label-icon).active{
-    transform: translateY(-20px) scale(.7);
+    -webkit-transform: translateY(-20px) scale(.7);
+        -ms-transform: translateY(-20px) scale(.7);
+            transform: translateY(-20px) scale(.7);
 }
 
 /**
@@ -950,15 +1043,22 @@ textarea.materialize-textarea:focus:not([readonly]){
 */
 
 .info-com{
+    background-image: -webkit-gradient(linear,left top, right top,from(#4cc4ff),to(#4ca6ff));
+    background-image: -webkit-linear-gradient(left,#4cc4ff,#4ca6ff);
+    background-image: -o-linear-gradient(left,#4cc4ff,#4ca6ff);
     background-image: linear-gradient(90deg,#4cc4ff,#4ca6ff);
 }
 
 .info-post{
+    background-image: -webkit-gradient(linear,left top, right top,from(#40dcb2),to(#40dc7e));
+    background-image: -webkit-linear-gradient(left,#40dcb2,#40dc7e);
+    background-image: -o-linear-gradient(left,#40dcb2,#40dc7e);
     background-image: linear-gradient(90deg,#40dcb2,#40dc7e);
 }
 
 .info-com, .info-post{
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+            box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
 .info-com .card-action, .info-post .card-action{
@@ -973,8 +1073,12 @@ textarea.materialize-textarea:focus:not([readonly]){
 }
 
 .info-com .card-content p, .info-post .card-content p{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .info-com .card-content p span, .info-post .card-content p span{
@@ -1019,6 +1123,8 @@ textarea.materialize-textarea:focus:not([readonly]){
 }
 
 .form-action{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -1034,7 +1140,8 @@ textarea.materialize-textarea:focus:not([readonly]){
 
 #comments-admin table, 
 #chapters-admin table{
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+            box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
     border-top: 1px solid #ddd;
     border-right: 1px solid #ddd;
     border-left: 1px solid #ddd;
@@ -1148,7 +1255,8 @@ textarea.materialize-textarea:focus:not([readonly]){
 }
 
 .mce-top-part::before{
-    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
 }
 
 .mce-btn-group:not(:first-child){
@@ -1158,7 +1266,8 @@ textarea.materialize-textarea:focus:not([readonly]){
 
 .mce-panel{
     border: none !important;
-    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
 }
 
 .mce-flow-layout {
@@ -1181,15 +1290,15 @@ textarea.materialize-textarea:focus:not([readonly]){
 }
 
 @media only screen and (max-width: 992px){
-	.chapter-desc{
-		margin-bottom: 50px;
-	}
+    .chapter-desc{
+        margin-bottom: 50px;
+    }
 }
 
 @media only screen and (min-width: 993px){
-	.more-link{
-		margin-top: 50px;
-	}
+    .more-link{
+        margin-top: 50px;
+    }
 
     h1 {
         font-size: 46px;
